crates/rustmat-macros/tests/ui/fail_no_name.stderr
error: custom attribute panicked
 --> tests/ui/fail_no_name.rs:3:1
  |
3 | #[matlab_fn]
  | ^^^^^^^^^^^^
  |
  = help: message: expected `name = "..."` argument
