crates/rustmat-macros/tests/ui/fail_no_name.rs
use rustmat_macros::matlab_fn;

#[matlab_fn]
fn foo() {}

fn main() {}
